--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -3,3 +3,5 @@ booking.property=Booking Profile Dev
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+app.testProp= actualizado el 07
