--- a/producto-microservices-dev.properties
+++ b/producto-microservices-dev.properties
@@ -1,2 +1,5 @@
-product.property=Product Profile 
-app.testProp= actualizado el 07
+product.property=Product Profile
+
+spring.data.mongodb.uri=mongodb://localhost:27017/productdb
+
+app.testProp=Propiedad de prueba
