--- a/producto-microservices-dev.properties
+++ b/producto-microservices-dev.properties
@@ -2,4 +2,4 @@ product.property=Product Profile
 
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
 
-app.testProp=actualización 123
+app.testProp=actualización ultima definitiva
