--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,3 +1,5 @@
 booking.property=Booking Profile Dev
 
+spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
+
 app.testProp= actualizado el 07
