--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,5 +1,12 @@
 booking.property=Booking Profile Dev
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Barce195!
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 app.testProp= actualizado el 07
