--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -7,6 +7,9 @@ spring.datasource.password=Barce195!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+management.endpoints.web.exposure.include=*
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 app.testProp= actualizado el 07
