--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -12,4 +12,4 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 management.endpoints.web.exposure.include=*
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-app.testProp= actualizado el 07
+app.testProp= actualizado el 0898989
